--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-28 01:08:53+00:00\n"
+"POT-Creation-Date: 2014-01-31 14:15:53+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -429,6 +429,9 @@ msgid ""
 msgstr ""
 "AWPCP no pudo obtener un token de acceso válido para Facebook. Por favor "
 "intente de nuevo."
+
+msgid "AWPCP could not obtain a valid access token from Facebook: %s"
+msgstr "AWPCP no pudo obtener un token de acceso válido de Facebook: %s"
 
 msgid ""
 "AWPCP features are currently disabled because the plugin needs you to "
@@ -2133,6 +2136,13 @@ msgstr "Diagnóstico de la Configuración de Facebook"
 
 msgid "Facebook Integration"
 msgstr "Integración con Facebook"
+
+msgid ""
+"Facebook Integration is in beta. Please let us know if you experience any "
+"problems or have feature suggestions."
+msgstr ""
+"La integración con Facebook está en Beta. Por favor infórmenos si "
+"experimenta algún problema o tiene sugerencias."
 
 msgid "Facebook Page"
 msgstr "Página de Facebook"
