Update translation files.

--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-31 14:15:53+00:00\n"
+"POT-Creation-Date: 2014-02-13 06:14:01+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -2066,6 +2066,13 @@ msgstr "Ejemplo de salid: %s"
 msgid "Excerpt View"
 msgstr "Ecerpt View"
 
+msgid ""
+"Existing Ads were renewed using the new expiration date for your "
+"Subscription."
+msgstr ""
+"Los anuncios existenes fueron renovados usando la nueva fecha de expiración "
+"de su subscripción."
+
 msgid "Existing Files"
 msgstr "Archivos Existentes"
 
@@ -2582,6 +2589,18 @@ msgid ""
 msgstr ""
 "Si usted está teniendo problemas con las páginas de su plug-in, puede borrar "
 "y utilizar el botón Restaurar para crearlas de nuevo."
+
+msgid ""
+"If you are trying to upgrade your subscription in order to place more Ads, "
+"please take into account that you need to choose a plan that allows you to "
+"place more than %d Ads. Othersie your subscription will be upgraded and your "
+"existing Ads renewed, but your subscription would still be full."
+msgstr ""
+"Si está intentando mejorar su subscripción para publicar más anuncios, por "
+"favor tenga en cuenta que debe seleccionar un plan que le permita publicar "
+"más de %d anuncios. De otro modo, obtendrá una subscripción mejorada, con "
+"los anunciones existentes renovados, pero su subscripción seguirá estando "
+"llena."
 
 msgctxt "AWPCP"
 msgid ""
@@ -3608,6 +3627,14 @@ msgid ""
 msgstr ""
 "Sólo los usuarios registrados pueden comprar un Plan de Suscripción. Si ya "
 "estás registrado, por favor ingresa al sistema para comprar una Suscripción."
+
+msgid ""
+"Only registered users can purchase Subscription Plans. If you are already "
+"registered, please login below in order to buy or renew a Subscription."
+msgstr ""
+"Sólo los usuarios registrados pueden comprar un Plan de Suscripción. Si ya "
+"estás registrado, por favor ingresa al sistema para comprar o renovar una "
+"Suscripción."
 
 msgid ""
 "Only registered users can reply to Ads. If you are already registered, "
@@ -5385,6 +5412,9 @@ msgstr ""
 msgid "The Subscription Plan doesn't exist."
 msgstr "El Plan de Suscripción no existe."
 
+msgid "The Subscription associated with this transaction can't be found."
+msgstr "La subscripción asociada con esta transacción no existe."
+
 msgid "The Subscription couldn't be deleted"
 msgstr "La Suscripción no pudo borrarse"
 
@@ -5725,6 +5755,11 @@ msgid "The order used to sort Subscription Plans in the payment screens."
 msgstr ""
 "El orden usado para ordenar los planes de subscripción en los formularios de "
 "pagos."
+
+msgid ""
+"The payment associated with the current transaction failed (see reasons "
+"below)."
+msgstr "El pago asociado con la transacción actual falló (más detalles abajo)."
 
 msgid ""
 "The payment associated with this transaction failed (see reasons below)."
@@ -6459,9 +6494,10 @@ msgctxt "upload files"
 msgid "Unknown error encountered while uploading the image."
 msgstr "Ocurrió un error desconocido mientras se intentaba subir la imagen."
 
-msgid "Unkown step. Please contact the administrator about this error."
+msgid "Unkown step \"%s\". Please contact the administrator about this error."
 msgstr ""
-"Paso desconocido. Por favor contacte el administrador acerca de este error."
+"Paso desconocido \"%s\". Por favor contacte el administrador acerca de este "
+"error."
 
 msgid "Unpaid"
 msgstr "No pagada."
