--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-31 14:15:53+00:00\n"
+"POT-Creation-Date: 2014-02-13 06:14:01+00:00\n"
 "PO-Revision-Date: 2014-01-09 15:56-0500\n"
 "Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
@@ -1865,6 +1865,11 @@ msgstr ""
 msgid "Excerpt View"
 msgstr ""
 
+msgid ""
+"Existing Ads were renewed using the new expiration date for your "
+"Subscription."
+msgstr ""
+
 msgid "Existing Files"
 msgstr ""
 
@@ -2292,6 +2297,13 @@ msgstr ""
 msgid ""
 "If you are having problems with your plugin pages, you can delete them and "
 "use the Restore button to have the plugin create them again."
+msgstr ""
+
+msgid ""
+"If you are trying to upgrade your subscription in order to place more Ads, "
+"please take into account that you need to choose a plan that allows you to "
+"place more than %d Ads. Othersie your subscription will be upgraded and your "
+"existing Ads renewed, but your subscription would still be full."
 msgstr ""
 
 msgctxt "AWPCP"
@@ -3182,6 +3194,11 @@ msgstr ""
 msgid ""
 "Only registered users can purchase Subscription Plans. If you are already "
 "registered, please login below in order to buy a Subscription."
+msgstr ""
+
+msgid ""
+"Only registered users can purchase Subscription Plans. If you are already "
+"registered, please login below in order to buy or renew a Subscription."
 msgstr ""
 
 msgid ""
@@ -4797,6 +4814,9 @@ msgstr ""
 msgid "The Subscription Plan doesn't exist."
 msgstr ""
 
+msgid "The Subscription associated with this transaction can't be found."
+msgstr ""
+
 msgid "The Subscription couldn't be deleted"
 msgstr ""
 
@@ -5075,6 +5095,11 @@ msgid "The order used to sort Fees in the payment screens."
 msgstr ""
 
 msgid "The order used to sort Subscription Plans in the payment screens."
+msgstr ""
+
+msgid ""
+"The payment associated with the current transaction failed (see reasons "
+"below)."
 msgstr ""
 
 msgid ""
@@ -5674,7 +5699,7 @@ msgctxt "upload files"
 msgid "Unknown error encountered while uploading the image."
 msgstr ""
 
-msgid "Unkown step. Please contact the administrator about this error."
+msgid "Unkown step \"%s\". Please contact the administrator about this error."
 msgstr ""
 
 msgid "Unpaid"
