Update translation files.

--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2014-02-13 06:14:01+00:00\n"
+"POT-Creation-Date: 2014-02-19 23:01:17+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4522,7 +4522,7 @@ msgstr ""
 msgid "The field has been successfully deleted"
 msgstr ""
 
-msgid "The field has been updated successfully"
+msgid "The field has been updated successfully."
 msgstr ""
 
 msgctxt "upload files"
@@ -4850,10 +4850,10 @@ msgctxt "authorize.net"
 msgid "There was an error processing your transaction:<br/>%s"
 msgstr ""
 
-msgid "There was an error trying to add the new field."
+msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
 
-msgid "There was an error trying to contact Facebook servers: \"%s\"."
+msgid "There was an error trying to create the associated column in the Ads table for your Extra Field."
 msgstr ""
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
@@ -4884,7 +4884,7 @@ msgctxt "media manager"
 msgid "There was an error trying to set the image as the primary image."
 msgstr ""
 
-msgid "There was an error trying to update the new field."
+msgid "There was an error trying to update the associated column in the Ads table for your Extra Field."
 msgstr ""
 
 msgctxt "media manager"
