--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-02-13 06:14:01+00:00\n"
+"POT-Creation-Date: 2014-02-19 23:01:17+00:00\n"
 "PO-Revision-Date: 2014-01-09 15:56-0500\n"
 "Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
@@ -4958,7 +4958,7 @@ msgstr ""
 msgid "The field has been successfully deleted"
 msgstr ""
 
-msgid "The field has been updated successfully"
+msgid "The field has been updated successfully."
 msgstr ""
 
 msgctxt "upload files"
@@ -5368,10 +5368,12 @@ msgctxt "authorize.net"
 msgid "There was an error processing your transaction:<br/>%s"
 msgstr ""
 
-msgid "There was an error trying to add the new field."
+msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
 
-msgid "There was an error trying to contact Facebook servers: \"%s\"."
+msgid ""
+"There was an error trying to create the associated column in the Ads table "
+"for your Extra Field."
 msgstr ""
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
@@ -5404,7 +5406,9 @@ msgctxt "media manager"
 msgid "There was an error trying to set the image as the primary image."
 msgstr ""
 
-msgid "There was an error trying to update the new field."
+msgid ""
+"There was an error trying to update the associated column in the Ads table "
+"for your Extra Field."
 msgstr ""
 
 msgctxt "media manager"
