--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-02-13 06:14:01+00:00\n"
+"POT-Creation-Date: 2014-02-19 23:01:17+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -16,7 +16,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _e;__;_ex;_x\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.6.3\n"
+"X-Generator: Poedit 1.6.4\n"
 "X-Poedit-SearchPath-0: .\n"
 
 msgid ""
@@ -5593,8 +5593,8 @@ msgstr "La fecha de finalización es necesaria."
 msgid "The field has been successfully deleted"
 msgstr "El campo ha sido satisfactoriamente eliminado"
 
-msgid "The field has been updated successfully"
-msgstr "El campo ha sido actualizado."
+msgid "The field has been updated successfully."
+msgstr "El campo ha sido actualizado exitosamente."
 
 msgctxt "upload files"
 msgid "The file %s could not be copied to the destination directory."
@@ -6099,12 +6099,16 @@ msgctxt "authorize.net"
 msgid "There was an error processing your transaction:<br/>%s"
 msgstr "Se ha producido un error procesando su transacción de pago:<br/>%s"
 
-msgid "There was an error trying to add the new field."
-msgstr "Ocurrió un error tratando de agregar el nuevo campo."
-
 msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
 "Ocurrió un error tratando de contactar los servidores de Facebook. \"%s\"."
+
+msgid ""
+"There was an error trying to create the associated column in the Ads table "
+"for your Extra Field."
+msgstr ""
+"Ocurrió un error tratando de crear la columna asociada a este campo extra en "
+"la tabla de anuncios."
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
 msgstr ""
@@ -6141,8 +6145,12 @@ msgctxt "media manager"
 msgid "There was an error trying to set the image as the primary image."
 msgstr "Ocurrió un error tratando de asignar la imagen como imagen primaria."
 
-msgid "There was an error trying to update the new field."
-msgstr "Ocurrió un error tratando de actualizar el nuevo campo."
+msgid ""
+"There was an error trying to update the associated column in the Ads table "
+"for your Extra Field."
+msgstr ""
+"Ocurrió un error tratando de actualizar la columna asociada a este campo "
+"extra en la tabla de anuncios."
 
 msgctxt "media manager"
 msgid "There was an error trying to upload your file."
@@ -7726,6 +7734,9 @@ msgstr "usar información de planilla"
 
 msgid "visit the forums!"
 msgstr "viste los foros!"
+
+#~ msgid "There was an error trying to add the new field."
+#~ msgstr "Ocurrió un error tratando de agregar el nuevo campo."
 
 #~ msgctxt "awpcp upgrade"
 #~ msgid ""
