--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-02-19 23:01:17+00:00\n"
+"POT-Creation-Date: 2014-02-27 15:55:41+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -3100,6 +3100,12 @@ msgstr "Tamaño Máximo de Imagen"
 msgid "Max number used in Math CAPTCHA"
 msgstr "Máximo número usado en el CAPTCHA aritmético."
 
+msgid "Maximum Ad details length"
+msgstr "Longitud máxima para los detalles del anuncio"
+
+msgid "Maximum Ad title length"
+msgstr "Longitud máxima del título del anuncio"
+
 msgid "Maximum file size per image"
 msgstr "Tamaño máximo de archivo por imagen"
 
@@ -3107,30 +3113,24 @@ msgid "Maximum file size per image user can upload to system."
 msgstr ""
 "Tamaño máximo de archivo por imagen que el usuario puede subir al sistema."
 
-msgid "Maximun Ad details length"
-msgstr "Longitud máxima para los detalles del anuncio"
-
-msgid "Maximun Ad title length"
-msgstr "Longitud máxima del título del anuncio"
-
 msgid ""
-"Maximun height for images. Images taller than this are automatically resized "
+"Maximum height for images. Images taller than this are automatically resized "
 "upon upload."
 msgstr ""
-"Alto mínimo para las imágenes. Imágenes más altas que este valor son "
+"Alto máximo para las imágenes. Imágenes más altas que este valor son "
 "redimensionadas automáticamente cuando se cargan en el servidor."
 
-msgid "Maximun image height"
+msgid "Maximum image height"
 msgstr "Altura máxima de la imagen"
 
-msgid "Maximun image width"
+msgid "Maximum image width"
 msgstr "Ancho máximo de la imagen"
 
 msgid ""
-"Maximun width for images. Images wider than this are automatically resized "
+"Maximum width for images. Images wider than this are automatically resized "
 "upon upload."
 msgstr ""
-"Ancho mínimo para las imágenes. Imágenes más anchas que este valor son "
+"Ancho máximo para las imágenes. Imágenes más anchas que este valor son "
 "redimensionadas automáticamente cuando se cargan en el servidor."
 
 msgid "Menu Items"
@@ -6363,8 +6363,8 @@ msgid "Top Level Category"
 msgstr "Categoría de Nivel Superior"
 
 msgctxt "transaction items"
-msgid "Total Amount ($)"
-msgstr "Total ($)"
+msgid "Total Amount"
+msgstr "Total Amount"
 
 msgctxt "transaction items"
 msgid "Total Amount (credit)"
