--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2014-02-19 23:01:17+00:00\n"
+"POT-Creation-Date: 2014-02-27 15:55:41+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2465,28 +2465,28 @@ msgstr ""
 msgid "Max number used in Math CAPTCHA"
 msgstr ""
 
+msgid "Maximum Ad details length"
+msgstr ""
+
+msgid "Maximum Ad title length"
+msgstr ""
+
 msgid "Maximum file size per image"
 msgstr ""
 
 msgid "Maximum file size per image user can upload to system."
 msgstr ""
 
-msgid "Maximun Ad details length"
+msgid "Maximum height for images. Images taller than this are automatically resized upon upload."
 msgstr ""
 
-msgid "Maximun Ad title length"
+msgid "Maximum image height"
 msgstr ""
 
-msgid "Maximun height for images. Images taller than this are automatically resized upon upload."
+msgid "Maximum image width"
 msgstr ""
 
-msgid "Maximun image height"
-msgstr ""
-
-msgid "Maximun image width"
-msgstr ""
-
-msgid "Maximun width for images. Images wider than this are automatically resized upon upload."
+msgid "Maximum width for images. Images wider than this are automatically resized upon upload."
 msgstr ""
 
 msgid "Menu Items"
@@ -5027,7 +5027,7 @@ msgid "Top Level Category"
 msgstr ""
 
 msgctxt "transaction items"
-msgid "Total Amount ($)"
+msgid "Total Amount"
 msgstr ""
 
 msgctxt "transaction items"
