--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-02-27 15:55:41+00:00\n"
+"POT-Creation-Date: 2014-03-04 00:26:28+00:00\n"
 "PO-Revision-Date: 2014-01-09 15:56-0500\n"
 "Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
@@ -127,8 +127,8 @@ msgid "(semi-colon)"
 msgstr ""
 
 msgid ""
-"**Only needed if registration is required and your login url is mod-"
-"rewritten."
+"**Only change this setting when using membership plugin with custom login "
+"pages or similar scenarios."
 msgstr ""
 
 msgctxt ""
@@ -649,12 +649,6 @@ msgctxt "place ad payment terms column headers"
 msgid "Ads Allowed"
 msgstr ""
 
-msgid ""
-"Ads will be associated to this user if the username column is not present in "
-"the CSV file, there is no user with that username and we couldn't find an "
-"user with the contact_email address specified in the CSV file."
-msgstr ""
-
 msgid "Advanced Email Configuration"
 msgstr ""
 
@@ -862,6 +856,14 @@ msgstr ""
 msgid "Anti-SPAM"
 msgstr ""
 
+msgctxt "csv-importer"
+msgid ""
+"Any value other than 'use spreadsheet information' means the Ads will be "
+"associated to the selected user if: the username column is not present in "
+"the CSV file, there is no user with that username and we couldn't find a "
+"user with the contact_email address specified in the CSV file."
+msgstr ""
+
 msgid "App Id"
 msgstr ""
 
@@ -894,7 +896,8 @@ msgstr ""
 msgid "Ascending"
 msgstr ""
 
-msgid "Assign Ads to an user?"
+msgctxt "csv-importer"
+msgid "Assign Ads to a user?"
 msgstr ""
 
 msgid "Attachments"
@@ -925,6 +928,9 @@ msgstr ""
 msgid "Awaiting Approval"
 msgstr ""
 
+msgid "Awaiting approval message"
+msgstr ""
+
 msgctxt "awpcp upgrade"
 msgid ""
 "Before you can use AWPCP again we need to upgrade your database. This "
@@ -939,11 +945,6 @@ msgid ""
 msgstr ""
 
 msgid "Below Ad images."
-msgstr ""
-
-msgid ""
-"Below you can add and edit your categories. For more information about "
-"managing your categories visit the link below."
 msgstr ""
 
 msgid ""
@@ -1186,9 +1187,6 @@ msgstr ""
 msgid "Click here to configure fees"
 msgstr ""
 
-msgid "Click here to find out about purchasing the Category Icons Module"
-msgstr ""
-
 msgid "Click here to have your Ad access keys sent to you."
 msgstr ""
 
@@ -1249,6 +1247,9 @@ msgstr ""
 
 msgctxt "place ad checkout step"
 msgid "Complete Payment"
+msgstr ""
+
+msgid "Completed"
 msgstr ""
 
 msgctxt "ad payment status"
@@ -1423,7 +1424,7 @@ msgstr ""
 msgid "Crop primary image thumbnails?"
 msgstr ""
 
-msgid "Crop thumbnails images?"
+msgid "Crop thumbnail images?"
 msgstr ""
 
 msgid "Currency"
@@ -1448,6 +1449,9 @@ msgid "Current Ad count must be equal or greater than zero."
 msgstr ""
 
 msgid "Current page"
+msgstr ""
+
+msgid "Custom Registration Page URL"
 msgstr ""
 
 msgid "Customer attempt to pay has failed"
@@ -1522,7 +1526,7 @@ msgstr ""
 msgid "Delete Ad"
 msgstr ""
 
-msgid "Delete Ads if any"
+msgid "Delete Ads too"
 msgstr ""
 
 msgid "Delete Category"
@@ -1543,6 +1547,9 @@ msgid "Delete Search Region"
 msgstr ""
 
 msgid "Delete Selected Categories"
+msgstr ""
+
+msgid "Delete categories should do this with existing Ads"
 msgstr ""
 
 msgid "Delete this item"
@@ -1575,6 +1582,9 @@ msgstr ""
 
 msgctxt "media manager"
 msgid "Disable"
+msgstr ""
+
+msgid "Disable AWPCP Lightbox feature"
 msgstr ""
 
 msgid "Disable Ad until admin approves"
@@ -1963,10 +1973,10 @@ msgstr ""
 msgid "Fee Per Category Module"
 msgstr ""
 
-msgid "Fee order"
+msgid "Fee Plan sort direction"
 msgstr ""
 
-msgid "Fee order direction"
+msgid "Fee Plan sort order"
 msgstr ""
 
 msgid "Fee per Category"
@@ -2254,12 +2264,13 @@ msgstr ""
 msgid "If checked, categories with 0 listings in it won't be shown."
 msgstr ""
 
+msgctxt "csv-importer"
+msgid "If checked, the Ads will belong to the user specified below."
+msgstr ""
+
 msgid ""
 "If checked, the RSS feed for specific categories will include Ads in "
 "children categories."
-msgstr ""
-
-msgid "If deleting categories"
 msgstr ""
 
 msgid ""
@@ -2277,6 +2288,10 @@ msgstr ""
 msgid "If enabled, users will be allowed to search Ads in multiple regions."
 msgstr ""
 
+msgctxt "csv-importer"
+msgid "If the CSV does not contain start/end dates, use these by default:"
+msgstr ""
+
 msgid ""
 "If this is a Fee for specific categories then select those categories below, "
 "otherwise leave the categories unchecked."
@@ -2289,9 +2304,6 @@ msgid ""
 msgstr ""
 
 msgid "If unchecked only categories will be displayed"
-msgstr ""
-
-msgid "If unchecked, Ads won't be associated to an user."
 msgstr ""
 
 msgid ""
@@ -2320,7 +2332,7 @@ msgid ""
 "in the settings above but part of the image may be cropped out. If you "
 "decide to resize, image thumbnails will be resized to match the specified "
 "width and their height will be adjusted proportionally; depending on the "
-"uploaded images, thumbnails may have differnt heights."
+"uploaded images, thumbnails may have different heights."
 msgstr ""
 
 msgid ""
@@ -2596,11 +2608,8 @@ msgid "Location"
 msgstr ""
 
 msgid ""
-"Location of registraiton page. Value should be the full URL to the wordpress "
+"Location of registration page. Value should be the full URL to the wordpress "
 "registration page (e.g. http://www.awpcp.com/wp-login.php?action=register)."
-msgstr ""
-
-msgid "Location of registration page"
 msgstr ""
 
 msgctxt "authorize.net"
@@ -2613,7 +2622,7 @@ msgstr ""
 msgid ""
 "Looking for a job? Trying to find a date? Looking for an apartment? Browse "
 "our classifieds. Have a job to advertise? An apartment to rent? Post a "
-"classified ad."
+"Classified Ad."
 msgstr ""
 
 msgid "Lost your password?"
@@ -2739,7 +2748,10 @@ msgstr ""
 msgid "Maximum file size per image"
 msgstr ""
 
-msgid "Maximum file size per image user can upload to system."
+msgid ""
+"Maximum file size, in bytes, for files user can upload to system. 1 MB = "
+"1048576 bytes. You can google \"x MB to bytes\" to get an accurate "
+"convertion."
 msgstr ""
 
 msgid ""
@@ -2806,7 +2818,10 @@ msgstr ""
 msgid "Minimum file size per image"
 msgstr ""
 
-msgid "Minimum file size per image user can upload to system"
+msgid ""
+"Minimum file size, in bytes, for files user can upload to system. 1 MB = "
+"1048576 bytes. You can google \"x MB to bytes\" to get an accurate "
+"convertion."
 msgstr ""
 
 msgid "Minimum height for images."
@@ -2861,7 +2876,7 @@ msgstr[1] ""
 msgid "More Information"
 msgstr ""
 
-msgid "Move Ads if any"
+msgid "Move Ads to new category"
 msgstr ""
 
 msgid "Move Selected Categories"
@@ -3050,9 +3065,6 @@ msgid ""
 "from all categories."
 msgstr ""
 
-msgid "Non Verified"
-msgstr ""
-
 msgid "None"
 msgstr ""
 
@@ -3123,8 +3135,7 @@ msgid "Number of columns of thumbnails to show in Show Ad page."
 msgstr ""
 
 msgid ""
-"Number of days before Ads that remain in a non verified status will be "
-"deleted"
+"Number of days before Ads that remain in a unverified status will be deleted"
 msgstr ""
 
 msgid "Number of days before the verification email is sent again"
@@ -3179,8 +3190,9 @@ msgid "Only admin users are allowed to edit or post commments."
 msgstr ""
 
 msgid ""
-"Only email addresses with a domain in the list above will be allowed. Please "
-"type a domain per line."
+"Only email addresses with a domain in the list above will be allowed. *.foo."
+"com will match a.foo.com, b.foo.com, etc. but foo.com will match foo.com "
+"only. Please type a domain per line."
 msgstr ""
 
 msgid ""
@@ -3745,6 +3757,9 @@ msgstr ""
 msgid "Regions Control Module"
 msgstr ""
 
+msgid "Regions Settings"
+msgstr ""
+
 msgctxt "regions module"
 msgid ""
 "Regions of types <strong>%s</strong> were found in level %d of your "
@@ -3923,9 +3938,6 @@ msgid "Rewrite Rules"
 msgstr ""
 
 msgid "Role of WordPress users who can have admin access to Classifieds."
-msgstr ""
-
-msgid "Role of admin users"
 msgstr ""
 
 msgid "Row %d. %s"
@@ -4550,7 +4562,7 @@ msgid "Textarea"
 msgstr ""
 
 msgid ""
-"Thank you for submitting your classified ad. The details of your ad are "
+"Thank you for submitting your Classified Ad. The details of your ad are "
 "shown below."
 msgstr ""
 
@@ -4606,8 +4618,8 @@ msgstr ""
 
 msgctxt "awpcp comments notices"
 msgid ""
-"The AWPCP Comments module requires Akismet to be configured with a valid API "
-"key."
+"The AWPCP Comments module requires Akismet to be configured with a <akismet-"
+"config-link>valid API key</a>."
 msgstr ""
 
 msgid "The AWPCP Coupons module requires AWPCP version %s or newer!"
@@ -4707,6 +4719,9 @@ msgid "The Card Security Code is required."
 msgstr ""
 
 msgid "The City is required."
+msgstr ""
+
+msgid "The Classified Ad's ad access key you requested"
 msgstr ""
 
 msgid "The Comment text can't be empty. HTML is not allowed."
@@ -4878,9 +4893,6 @@ msgid ""
 msgstr ""
 
 msgid "The city is a required field."
-msgstr ""
-
-msgid "The classified Ad's ad access key you requested"
 msgstr ""
 
 msgid "The classifieds listing \"%s\" has been successfully renewed."
@@ -5314,11 +5326,6 @@ msgid ""
 msgstr ""
 
 msgid ""
-"There is a premium module available that allows you to add icons to your "
-"categories. If you are interested in adding icons to your categories "
-msgstr ""
-
-msgid ""
 "There is a problem with the currency code you have entered. It does not "
 "match any of the codes in the list of available currencies provided by "
 "PayPal."
@@ -5502,12 +5509,12 @@ msgid ""
 "Ad, manage the uploaded images or finish the posting process."
 msgstr ""
 
-msgid ""
-"This is an automated notification that your classified Ad will expire in %d "
-"days."
+msgid "This is an automated notification that your Classified Ad has expired."
 msgstr ""
 
-msgid "This is an automated notification that your classified ad has expired."
+msgid ""
+"This is an automated notification that your Classified Ad will expire in %d "
+"days."
 msgstr ""
 
 msgid ""
@@ -5529,6 +5536,9 @@ msgstr ""
 msgid "Thousands separator"
 msgstr ""
 
+msgid "Thumbnail Settings"
+msgstr ""
+
 msgid "Thumbnail height"
 msgstr ""
 
@@ -5542,9 +5552,6 @@ msgid "Thumbnail width (Ad Listings page)"
 msgstr ""
 
 msgid "Thumbnail width (Primary Image)"
-msgstr ""
-
-msgid "Thumbnails Settings"
 msgstr ""
 
 msgctxt "images upload step"
@@ -5608,11 +5615,8 @@ msgid "Transaction Key"
 msgstr ""
 
 msgid ""
-"Turn off the thickbox/lightbox if it conflicts with other elements of your "
-"site"
-msgstr ""
-
-msgid "Turn off thickbox/lightbox?"
+"Turn off the lightbox/thickbox element used by AWPCP. Some themes cannot "
+"handle it and a conflict results."
 msgstr ""
 
 msgid "Turn on Search Engine Friendly URLs"
@@ -5720,6 +5724,9 @@ msgstr ""
 msgid "Untitled"
 msgstr ""
 
+msgid "Unverified"
+msgstr ""
+
 msgid "Up"
 msgstr ""
 
@@ -5817,9 +5824,6 @@ msgid ""
 "icons in %s."
 msgstr ""
 
-msgid "Useful Information for Classifieds Categories Management"
-msgstr ""
-
 msgid "User"
 msgstr ""
 
@@ -5912,9 +5916,6 @@ msgstr ""
 msgid "Visit Website"
 msgstr ""
 
-msgid "Waiting approval message"
-msgstr ""
-
 msgid "Warning"
 msgstr ""
 
@@ -5980,6 +5981,9 @@ msgstr ""
 msgid ""
 "When checked your customers will be able to enter a coupon code in the "
 "shopping cart before checkout"
+msgstr ""
+
+msgid "Who can access AWPCP Admin Dashboard"
 msgstr ""
 
 msgid "Whole Number"
@@ -6105,7 +6109,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"You asked to have your classified Ad's access key resent. Below are all the "
+"You asked to have your Classified Ad's access key resent. Below are all the "
 "Ad access keys in the system that are tied to the email address you provided"
 msgstr ""
 
@@ -6120,9 +6124,6 @@ msgctxt "upload files step"
 msgid ""
 "You can also upload a new image and mark it as primary using the fields "
 "below."
-msgstr ""
-
-msgid "You can configure default dates for imported Ads"
 msgstr ""
 
 msgid ""
@@ -6319,6 +6320,11 @@ msgid "You don't have sufficient permissions to modify that Ad's media"
 msgstr ""
 
 msgid ""
+"You enabled the Credit System, but there are no credit plans defined. Please "
+"<credits-section-link>add credit plans or disable the Credit System</a>."
+msgstr ""
+
+msgid ""
 "You have entered a keyword that is too short to search on. Search keywords "
 "must be at least 3 letters in length. Please try another term."
 msgstr ""
@@ -6356,6 +6362,12 @@ msgid ""
 "will automatically appear on the listing form for users to fill out."
 msgstr ""
 
+msgid ""
+"You have payments enabled, but there are no payment terms defined. Users "
+"won't be able to post Ads. Please <fee-section-link>add payment terms</a> or "
+"<payments-settings-link>configure the website as a free board</a>."
+msgstr ""
+
 msgid "You have setup your listing fees. To edit your fees go to %s."
 msgstr ""
 
@@ -6375,6 +6387,12 @@ msgstr ""
 msgid ""
 "You may view your sitemap here: %s or perhaps here if you set it to GZIP "
 "instead: %s"
+msgstr ""
+
+msgid ""
+"You must have registered users to use this setting. Turning it on will "
+"automatically enable \"Require Registration\" for AWPCP. Make sure you site "
+"allows users to register under <wp-settings-link>Settings->General</a>."
 msgstr ""
 
 msgctxt "Edit Region error message"
@@ -6438,10 +6456,13 @@ msgid "Your Ad has been successfully updated. Ad information is shown below."
 msgstr ""
 
 msgid ""
-"Your Ad was flagged as spam.  Please contact the administrator of this site."
+"Your Ad was flagged as spam. Please contact the administrator of this site."
 msgstr ""
 
 msgid "Your AdSense code (Best if 468x60 text or banner.)"
+msgstr ""
+
+msgid "Your Classified Ad listing has been submitted"
 msgstr ""
 
 msgid ""
@@ -6490,9 +6511,6 @@ msgid "Your category changes have been saved."
 msgstr ""
 
 msgid "Your changes have been saved."
-msgstr ""
-
-msgid "Your classified ad listing has been submitted"
 msgstr ""
 
 msgid "Your classifieds listing \"%s\" has been successfully renewed."
