--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-03-21 23:00:02+00:00\n"
+"POT-Creation-Date: 2014-03-25 16:49:45+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -6980,8 +6980,8 @@ msgstr ""
 "seleccionar una subcategoría de la categoría %s."
 
 #: includes/payments-api.php:462
-msgid "You currently have %d in credit in your account."
-msgstr "Usted tiene actualmente %d en crédito en su cuenta."
+msgid "You currently have %s in credit in your account."
+msgstr "Usted tiene actualmente %s en crédito en su cuenta."
 
 #: frontend/shortcode.php:293
 msgid "You currently have no classifieds"
