--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-03-21 23:00:02+00:00\n"
+"POT-Creation-Date: 2014-03-25 16:49:45+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4609,7 +4609,7 @@ msgid ""
 msgstr ""
 
 #: includes/payments-api.php:462
-msgid "You currently have %d in credit in your account."
+msgid "You currently have %s in credit in your account."
 msgstr ""
 
 #: includes/payments-api.php:502
